--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -14,7 +14,7 @@ header {
     width: 120px;
 }
 
-.header__menu__btn {
+.header__btn {
     position: absolute;
     top: 10px;
     right: 20px;
@@ -24,12 +24,17 @@ header {
     border: 1px solid $color-3;
     border-radius: 5px;
     font-size: 1.4rem;
+
+    &:focus ~ .header__menu{
+        display:block;
+    }
 }
 
 .header__menu {
     position: absolute;
     right: 0;
     display: none;
+    z-index:2;
 
 }
 
