--- a/app/scss/partials/_section.scss
+++ b/app/scss/partials/_section.scss
@@ -151,6 +151,7 @@
     @extend %box;
     background-color: $color-4;
     text-align: center;
+    position:relative:
 }
 
 .qualifications__headers {
