--- a/app/scss/partials/_section.scss
+++ b/app/scss/partials/_section.scss
@@ -54,10 +54,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    width:100%;
 }
 
-.section__header {
+%box__header {
     font-size: 3.2rem;
     text-transform: uppercase;
     text-align: center;
@@ -85,7 +84,9 @@
     width: 45px;
 }
 
-
+.company__header {
+    @extend %box__header;
+}
 
 .company__article__header {
     font-size: 2rem;
@@ -102,17 +103,12 @@
     background-color: $color-4;
 }
 
-<<<<<<< HEAD
-.realizations__list{
-	/*line-height: 2.6rem;*/
-=======
 .realizations__header {
     @extend %box__header;
 }
 
 .realizations__list {
     
->>>>>>> origin/first-stage
 }
 
 .realizations__list li {
@@ -144,14 +140,11 @@
     margin: 10px;
 }
 
-<<<<<<< HEAD
-=======
 .reference__header {
     @extend %box__header;
 }
 
 
->>>>>>> origin/first-stage
 /* qualifications */
 
 .qualifications {
@@ -161,11 +154,6 @@
     position:relative:
 }
 
-<<<<<<< HEAD
-.qualifications__doc{
-	width: 300px;
-	text-align: center;
-=======
 .qualifications__headers {
     @extend %box__header;
 }
@@ -174,7 +162,6 @@
     max-width: 40%;
     text-align: center;
     margin: 5px;
->>>>>>> origin/first-stage
 }
 
 .qualifications__doc img {
@@ -188,16 +175,6 @@
 
 /* contact */
 
-<<<<<<< HEAD
-.contact{
-	@extend %box;
-
-}
-
-.contact__logo{
-   width:auto;
-   height:80px;
-=======
 .contact {
     @extend %box;
     background-color:$color-2;
@@ -212,7 +189,6 @@
     width: 50%;
     height:100%;
     flex-basis: 30%;
-<<<<<<< HEAD
     filter:invert(1);
 }
 .contact__company{
@@ -278,7 +254,3 @@
     padding:20px 10px;
 
 }
-=======
->>>>>>> origin/first-stage
-}
->>>>>>> master
