--- a/app/scss/partials/_section.scss
+++ b/app/scss/partials/_section.scss
@@ -19,6 +19,7 @@
     text-align: center;
     font-size: 3.2rem;
     text-transform: uppercase;
+    border:5px solid $color-5;
 }
 
 .slide__info {
@@ -63,6 +64,8 @@
     align-content: center;
     flex-basis: 100%;
 }
+
+
 
 
 
@@ -151,7 +154,7 @@
     @extend %box;
     background-color: $color-4;
     text-align: center;
-    position:relative:
+    position:relative;
 }
 
 .qualifications__headers {
@@ -194,6 +197,11 @@
 .contact__company{
     text-align: center;
     line-height: 2.6rem;
+}
+.contact__map{
+    width:100%;
+    height:200px;
+    border-radius:20px;
 }
 .contact__address{
     padding:10px 0;
