--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,31 +1,8 @@
-  @import 'modules/settings';
-	@import 'partials/header';
-	@import 'partials/section';
-
-	svg {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-}
-
-@media (max-width: 699px) {
-  .svg--lg {
-    display: none;
-  }
-}
-
-@media (min-width: 700px) {
-  .svg--sm {
-    display: none;
-  }
-}
-
-
-svg.skos {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 10vw;
-  /* set height to pixels if you want angle to change with screen width */
-}
+   @import 'vendor/modernize';
+   @import 'modules/settings';
+   @import 'partials/header';
+   @import 'partials/start';
+   @import 'partials/company';
+   @import 'partials/realizations';
+   @import 'partials/reference';
+   @import 'partials/section';
