--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -11,6 +11,7 @@
     position: fixed;
     z-index: 2;
     align-content: center;
+    top: 0;
 }
 
 .header__logo {
@@ -18,12 +19,13 @@
     width: auto;
     height: 70%;
 }
+
 .header__menu {
     position: absolute;
     top: 50px;
     display: block;
-    width: 100vw; 
-    height:0px;
+    width: 100vw;
+    height: 0px;
 }
 
 .menu__btn {
@@ -36,7 +38,7 @@
     margin: 15px;
     font-size: 2.9rem;
 
-    &:focus ~ .menu__list{
+    &:focus~.menu__list {
         transform: translateX(0vw);
     }
 }
@@ -60,77 +62,78 @@
     }
     transition: 0.5s;
     transform: translateX(100vw);
-}
 
-.list__elem {
-    display: flex;
-    justify-content: center;
-}
-
-.list__link {
-    background-color: $color-5;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-    border: none;
-    color: $color-1;
-    cursor: pointer;
-    width: 90%;
-    display: inline-block;
-    font-size: 2.5rem;
-    line-height: 1em;
-    margin: 15px 10px;
-    outline: none;
-    padding: 12px 10px;
-    position: relative;
-    text-transform: uppercase;
-    font-weight: 900;
-    box-sizing: border-box;
-
-    &:before,
-    &:after {
-        border-color: transparent;
-        -webkit-transition: all 0.25s;
-        transition: all 0.25s;
-        border-style: solid;
-        border-width: 0;
-        content: "";
-        height: 24px;
-        position: absolute;
-        width: 34px;
+    .list__elem {
+        display: flex;
+        justify-content: center;
     }
-    &:focus:before,
-    &.focus:before,
-    &:focus:after,
-    &.focus:after {
-        height: 100%;
-        width: 100%;
+
+    .list__link {
+        background-color: $color-5;
+        text-align: center;
+        text-decoration: none;
+        text-transform: uppercase;
+        border: none;
+        color: $color-1;
+        cursor: pointer;
+        width: 90%;
+        display: inline-block;
+        font-size: 2.5rem;
+        line-height: 1em;
+        margin: 15px 10px;
+        outline: none;
+        padding: 12px 10px;
+        position: relative;
+        text-transform: uppercase;
+        font-weight: 900;
+        box-sizing: border-box;
+
+        &:before,
+        &:after {
+            border-color: transparent;
+            -webkit-transition: all 0.25s;
+            transition: all 0.25s;
+            border-style: solid;
+            border-width: 0;
+            content: "";
+            height: 24px;
+            position: absolute;
+            width: 34px;
+        }
+        &:focus:before,
+        &.focus:before,
+        &:focus:after,
+        &.focus:after {
+            height: 100%;
+            width: 100%;
+        }
+        &:hover:before,
+        &.hover:before,
+        &:hover:after,
+        &.hover:after {
+            height: 100%;
+            width: 100%;
+        }
     }
-    &:hover:before,
-    &.hover:before,
-    &:hover:after,
-    &.hover:after {
-        height: 100%;
-        width: 100%;
+
+
+    .list__link:before {
+        border-color: $color-5;
+        border-left-width: 2px;
+        border-top-width: 2px;
+        left: -5px;
+        top: -5px;
+    }
+
+    .list__link:after {
+        border-bottom-width: 2px;
+        border-color: $color-5;
+        border-right-width: 2px;
+        bottom: -5px;
+        right: -5px;
     }
 }
 
-
-.list__link:before {
-    border-color: $color-5;
-    border-left-width: 2px;
-    border-top-width: 2px;
-    left: -5px;
-    top: -5px;
-}
-
-.list__link:after {
-    border-bottom-width: 2px;
-    border-color: $color-5;
-    border-right-width: 2px;
-    bottom: -5px;
-    right: -5px;
-}
 
 // .list__link:hover,
 // .list__link.hover {
