--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,4 +1,5 @@
-   @import 'vendor/modernize';
+   @import 'vendor/normalize';
+   @import 'vendor/fontello';
    @import 'modules/mediaquery';
    @import 'modules/settings';
    @import 'partials/header';
