update dist work version

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,7 @@
    @import 'vendor/fontello';
    @import 'modules/mediaquery';
    @import 'modules/settings';
+   @import 'partials/loader';
    @import 'partials/header';
    @import 'partials/start';
    @import 'partials/company';
